# linphone-libxsd

./: .gitignore  CMakeLists.txt  FindXerces.cmake  INSTALL  LibXsdConfig.cmake.in  NEWS  README  makefile  version
doc/: custom-literals.xsd  makefile  xsd-epilogue.1  xsd-epilogue.xhtml  xsd-parser-header.1  xsd-prologue.1  xsd-prologue.xhtml  xsd-tree-header.1  xsd-tree-header.xhtml
doc/cxx/: makefile
doc/cxx/parser/: makefile
doc/cxx/tree/: makefile
documentation/: future.xhtml  makefile  schema-authoring-guide.xhtml  xsd-epilogue.1  xsd-epilogue.xhtml  xsd-parser-header.xhtml  xsd-prologue.1  xsd-prologue.xhtml  xsd.1  xsd.xhtml
documentation/cxx/: makefile
documentation/cxx/parser/: makefile
documentation/cxx/tree/: makefile
examples/: makefile
examples/cxx/parser/: makefile
examples/cxx/tree/: README  makefile
libxsd/: README  makefile
libxsd/xsd/cxx/: auto-array.hxx  config.hxx  exceptions.hxx  post.hxx  pre.hxx  ro-string.hxx  ro-string.txx  version.hxx  zc-istream.hxx  zc-istream.txx
tests/: makefile
tests/cxx/: makefile
tests/cxx/parser/: makefile
tests/cxx/tree/: makefile
xsd/: elements.hxx  makefile  options-parser.hxx  options.cli  types.hxx  usage.hxx  xsd.cxx  xsd.hxx
xsd/cxx/: elements.cxx  elements.hxx  literal-map.cxx  literal-map.hxx  option-types.cxx  option-types.hxx  options.cli
xsd/cxx/parser/: attribute-validation-source.cxx  attribute-validation-source.hxx  characters-validation-source.cxx  characters-validation-source.hxx  cli.hxx  driver-source.cxx  driver-source.hxx  element-validation-source.cxx  element-validation-source.hxx  elements.cxx  elements.hxx  generator.cxx  generator.hxx  impl-header.cxx  impl-header.hxx  impl-source.cxx  impl-source.hxx  name-processor.cxx  options.cli  (+16 more)
xsd/type-map/: lexer.cxx  lexer.hxx  parser.cxx  parser.hxx  type-map.hxx
(+512 files in other folders)
